newer version, with torch2jax and graphgym

--- a/models/article.ini
+++ b/models/article.ini
@@ -22,6 +22,10 @@ label = Image URL
 type = string
 label = Summary
 
+[fields.external_url]
+type = string
+label = external_url
+
 [fields.body]
 type = markdown
 label = Body
